# python-trading-212

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: python-package.yml
docs/: t212_openapi.json
t212/: async_client.py  client.py  config.py  models.py
t212/models/: __init__.py  shared.py
t212/models/account_summary/: models.py
t212/models/history_dividends/: models.py
t212/models/history_exports/: models.py
t212/models/history_orders/: models.py
t212/models/history_transactions/: models.py
t212/models/metadata/: models.py
t212/models/orders/: models.py
t212/models/pies/: models.py
t212/models/positions/: models.py
t212_mock_server/: Dockerfile
t212_mock_server/mappings/: cancel_order.json  create_pie.json  delete_pie.json  duplicate_pie.json  exchange_list.json  fetch_account_cash.json  fetch_account_metadata.json  fetch_account_summary.json  fetch_all_equity_orders.json  fetch_all_open_positions.json  fetch_by_id.json  fetch_open_position_by_id.json  historical_order_data.json  instrument_list.json  list_generated_reports.json  paid_out_dividends.json  place_limit_order.json  place_market_order.json  place_stop_limit_order.json  place_stop_order.json  request_csv_report.json  transactions_list.json  update_pie.json
tests/: test_config.py  test_something.py
tests/test_async_client/: conftest.py  test_exchange_list.py  test_fetch_account_cash.py  test_fetch_account_metadata.py  test_fetch_account_summary.py  test_fetch_all_equity_orders.py  test_fetch_all_open_positions.py  test_fetch_by_id.py  test_fetch_open_position_by_id.py  test_fetch_order_by_id.py  test_historical_order_data.py  test_instrument_list.py  test_new_endpoints.py  test_paid_out_dividends.py  test_place_orders.py  test_transactions_list.py
