[tool.poetry]
name = "t212-client"
version = "0.1.0"
description = ""
authors = ["Lancasterg <lancaster0180@gmail.com>"]
readme = "README.md"
packages = [{include = "t212"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.12.15"
pydantic = "^2.11.7"


[tool.poetry.group.dev.dependencies]
datamodel-code-generator = "^0.33.0"
black = "^25.1.0"
mypy = "^1.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
