[project]
name = "trading-212-client"
version = "0.2.0"
description = ""
authors = [{ name = "Lancasterg", email = "lancaster0180@gmail.com" }]
requires-python = ">=3.11,<3.14"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiohttp>=3.12.15,<4",
    "pydantic>=2.11.7,<3",
    "requests>=2.32.5,<3",
]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.33.0,<0.34",
    "black>=25.1.0,<26",
    "mypy>=1.17.1,<2",
    "pytest>=8.4.1,<9",
    "pytest-env>=1.1.5,<2",
    "pytest-asyncio>=1.3.0",
    "pytest-aiohttp>=1.1.0",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["t212"]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"


[tool.pytest.ini_options]
addopts = "-ra"
env = [
  "T212_API_KEY=abcdefg12345",
  "T212_ENVIRONMENT=demo"
]
